# reversi

Assignment 1/: CMakeLists.txt  game.c  game.h  gameboard.c  gameboard.h  player.c  player.h  readme.txt  reversi  reversi.c  reversi.h  scoreboard.c  scoreboard.h  shared.h  utility.c  utility.h
